--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "homepage": "https://github.com/aboe026/ci-cd",
   "engines": {
-    "node": ">=14.0.0",
-    "npm": ">=6.14.4"
+    "node": ">=16.13.0",
+    "npm": ">=8.1.0"
   },
   "scripts": {
     "backup": "ts-node src/backup.ts",
@@ -36,6 +36,7 @@
     "fs-extra": "10.0.0",
     "humanize-duration": "3.26.0",
     "log4js": "6.3.0",
+    "moment": "2.29.1",
     "yargs": "17.0.1"
   },
   "devDependencies": {
