--- a/compose/.env
+++ b/compose/.env
@@ -1,1 +1,9 @@
 COMPOSE_PROJECT_NAME=cicd
+
+# Jenkins
+CICD_JENKINS_PORT=8080
+CICD_JENKINS_VOLUME=
+
+# Nexus
+CICD_NEXUS_PORT=8081
+CICD_NEXUS_VOLUME=
