--- a/compose/docker-compose.yaml
+++ b/compose/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     ports:
       - '${CICD_JENKINS_PORT}:8080'
     environment:
-      - JAVA_OPTS="-Dorg.apache.commons.jelly.tags.fmt.timeZone=America/New_York -Dorg.jenkinsci.plugins.durabletask.BourneShellScript.HEARTBEAT_CHECK_INTERVAL=86400"
+      - JAVA_OPTS="-Dmail.smtp.starttls.enable=true -Dorg.jenkinsci.plugins.durabletask.BourneShellScript.HEARTBEAT_CHECK_INTERVAL=86400"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - $CICD_JENKINS_VOLUME:/var/jenkins_home
