--- a/compose/.env
+++ b/compose/.env
@@ -1,9 +1,11 @@
 COMPOSE_PROJECT_NAME=cicd
+CICD_VOLUME_DIR=
 
 # Jenkins
 CICD_JENKINS_PORT=8080
-CICD_JENKINS_VOLUME=
 
 # Nexus
 CICD_NEXUS_PORT=8081
-CICD_NEXUS_VOLUME=
+
+# Docker Registry
+CICD_REGISTRY_PORT=5000
