--- a/compose/docker-compose.yaml
+++ b/compose/docker-compose.yaml
@@ -26,3 +26,16 @@ services:
       - '${CICD_REGISTRY_PORT}:5000'
     volumes:
       - ${CICD_VOLUME_DIR}/docker-registry:/var/lib/registry
+      - ./registry-config.yml:/etc/docker/registry/config.yml
+
+  registry-ui:
+    image: joxit/docker-registry-ui
+    ports:
+      - '${CICD_REGISTRY_UI_PORT}:80'
+    environment:
+      - REGISTRY_URL=http://localhost:5000
+      - SINGLE_REGISTRY=true
+      - DELETE_IMAGES=false
+      - THEME=dark
+    depends_on:
+      - registry
