--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "backup": "ts-node src/backup.ts",
-    "build": "cd compose && docker-compose build",
+    "build": "cd compose && docker-compose build --progress=plain",
     "create": "cd compose && docker-compose up -d",
     "lint": "eslint . && prettier --check .",
     "lint:fix": "eslint --fix . && prettier --write .",
