--- a/compose/docker-compose.yaml
+++ b/compose/docker-compose.yaml
@@ -15,14 +15,14 @@ services:
     restart: on-failure
 
   nexus:
-    image: sonatype/nexus3:3.49.0
+    image: sonatype/nexus3:3.54.1
     ports:
       - '${CICD_NEXUS_PORT}:8081'
     volumes:
       - ${CICD_VOLUME_DIR}/nexus-data:/nexus-data
 
   registry:
-    image: registry:2
+    image: registry:2.8.2
     ports:
       - '${CICD_REGISTRY_PORT}:5000'
     volumes:
@@ -30,7 +30,7 @@ services:
       - ./registry-config.yml:/etc/docker/registry/config.yml
 
   registry-ui:
-    image: joxit/docker-registry-ui
+    image: joxit/docker-registry-ui:2.4.1
     ports:
       - '${CICD_REGISTRY_UI_PORT}:80'
     environment:
