--- a/compose/docker-compose.yaml
+++ b/compose/docker-compose.yaml
@@ -12,17 +12,17 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ${CICD_VOLUME_DIR}/jenkins_home:/var/jenkins_home
-    restart: on-failure
+    restart: unless-stopped
 
   nexus:
-    image: sonatype/nexus3:3.60.0
+    image: sonatype/nexus3:3.61.0
     ports:
       - '${CICD_NEXUS_PORT}:8081'
     volumes:
       - ${CICD_VOLUME_DIR}/nexus-data:/nexus-data
 
   registry:
-    image: registry:2.8.2
+    image: registry:2.8.3
     ports:
       - '${CICD_REGISTRY_PORT}:5000'
     volumes:
@@ -30,7 +30,7 @@ services:
       - ./registry-config.yml:/etc/docker/registry/config.yml
 
   registry-ui:
-    image: joxit/docker-registry-ui:2.5.2
+    image: joxit/docker-registry-ui:2.5.5
     ports:
       - '${CICD_REGISTRY_UI_PORT}:80'
     environment:
